Added dockerfile, and docker.yml

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,4 +34,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/shopifly:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/bakeMyDay:${{  github.ref_name }}
