--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,4 +32,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/bakeMyDay:${{  github.ref_name }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/bakemyday:${{  github.ref_name }}
